WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248465
Assertion failure running CompletionHandler queued from Queue::commitMTLCommandBuffer
https://bugs.webkit.org/show_bug.cgi?id=248465
Summary
Assertion failure running CompletionHandler queued from Queue::commitMTLComma...
Mike Wyrzykowski
Reported
2022-11-29 05:57:10 PST
Assertion failure running CompletionHandler queued from Queue::commitMTLCommandBuffer
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2022-11-29 05:57:31 PST
radar://102762635
Mike Wyrzykowski
Comment 2
2022-11-29 10:37:02 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6921
EWS
Comment 3
2022-11-29 19:18:51 PST
Committed
257156@main
(de29e5658ea3): <
https://commits.webkit.org/257156@main
> Reviewed commits have been landed. Closing PR #6921 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug