Assertion failure running CompletionHandler queued from Queue::commitMTLCommandBuffer https://bugs.webkit.org/show_bug.cgi?id=248465 <radar://102762635>

Reviewed by Kimmo Kinnunen.

Instance::scheduleWork is supposed to be able to be called on a background thread,
but doing so would have resulted in an assertion when attempting to run the block
as these completion handlers are run on the WebGPU work queue. Address this by
allowing it to run on any thread, in practice it will run on the WebGPU work queue
as intended.

* Source/WebCore/PAL/pal/graphics/WebGPU/Impl/WebGPUCreateImpl.cpp:
(PAL::WebGPU::create):
* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::commitMTLCommandBuffer):

Canonical link: https://commits.webkit.org/257156@main