Source/WebGPU/WebGPU/Queue.mm
@@ -128,7 +128,7 @@ void Queue::commitMTLCommandBuffer(id<MTLCommandBuffer> commandBuffer)
             ++(protectedThis->m_completedCommandBufferCount);
             for (auto& callback : protectedThis->m_onSubmittedWorkDoneCallbacks.take(protectedThis->m_completedCommandBufferCount))
                 callback(WGPUQueueWorkDoneStatus_Success);
-        }, CompletionHandlerCallThread::MainThread));
+        }, CompletionHandlerCallThread::AnyThread));
     }];
 
     [commandBuffer commit];
